Add FAQ section for SEO and user information
Added FAQ section to improve SE- Added comprehensive FAQ section below 'made by nilim' footer text
- Includes 9 FAQ questions covering: what is Memeception, how to use, custom memes, pricing, accounts, device support, templates, social sharing, and search terms
- SEO-optimized content with keywords for: meme generator, meme maker, free tool, meme templates, etc.
- Helps Google search visibility for common meme-related queries
- Improves user experience by addressing common questions
- Next: Add CSS styling for the FAQ sectionO and user guidance.

--- a/index.html
+++ b/index.html
@@ -58,6 +58,41 @@
 
     <footer class="site-footer">
       made by nilim
+              <!-- FAQ Section for SEO -->
+        <section id="faq" class="faq-section">
+            <div class="faq-container">
+                <h2>Frequently Asked Questions - Memeception</h2>
+                
+                <div class="faq-content">
+                    <h3>What is Memeception?</h3>
+                    <p>Memeception is a fast, free online meme generator that lets you create, remix and download memes in seconds using popular meme templates and your own images. It is designed for creators who want an insanely quick, mobile-friendly way to make viral, high-quality memes for Instagram, X (Twitter), YouTube and more.</p>
+
+                    <h3>How do I use this meme generator?</h3>
+                    <p>Using Memeception is simple: Select your preferred meme category (Dank, Tech, Dark Humor, Wholesome, Relatable, Pun, Sarcasm, Cringe) from the dropdown menu at the top. Click "Gimme a Meme" to generate a random meme template. Once your meme appears, you can save, download, or share it directly to your favorite social media platforms.</p>
+
+                    <h3>Can I create custom memeception or layered memes?</h3>
+                    <p>Yes, Memeception supports creating custom and layered memes. You can stack screenshots or multiple images to build meta-memes or "memeception" style posts that remix existing memes into new joke layers. This is perfect for advanced meme creators who like blending formats, reactions and inside jokes into a single template.</p>
+
+                    <h3>Is Memeception really free to use?</h3>
+                    <p>Absolutely! This meme maker is completely free to use in your browser with no installation required. Just open the site, generate your meme and save it instantly in high quality. No hidden fees, subscriptions, or watermarks.</p>
+
+                    <h3>Do I need an account to make memes?</h3>
+                    <p>You can start creating and downloading memes without signing up or logging in. Optional account features (if enabled) may help you save favorites, recent templates or meme drafts for later editing, but they're not required to use the core meme generator functionality.</p>
+
+                    <h3>What devices and browsers does Memeception support?</h3>
+                    <p>Memeception is mobile-friendly and works in all modern browsers on phones, tablets and desktops. You can generate memes quickly whether you are on Android, iOS, Windows, macOS or Linux. The responsive design ensures a smooth experience across all screen sizes.</p>
+
+                    <h3>Which popular meme templates are available here?</h3>
+                    <p>Memeception supports a diverse collection of classic meme formats and trending templates that evolve regularly. Our collection includes image macros, reaction templates, and modern viral formats similar to other popular online meme generators. New meme templates and layout options are added continuously so you always have fresh formats for your content.</p>
+
+                    <h3>Can I use memes made here on social media or YouTube?</h3>
+                    <p>Yes, you can share, repost and integrate your generated memes into Instagram posts, TikTok shorts, YouTube reels, community posts and video thumbnails, subject to the underlying image and template rights. Always respect platform guidelines and any copyrights attached to third-party images or characters used in your memes.</p>
+
+                    <h3>What are common searches people use to find Memeception?</h3>
+                    <p>People often search for terms like "Memeception meme generator", "Memeception meme maker online", "free meme generator no watermark", "online meme caption maker", "fast mobile meme generator", "AI meme generator website", "meme template generator", "instant meme creator" and "best meme making tool". This FAQ helps search engines understand that Memeception is a free, fast, browser-based meme creator for making high-quality memes with templates, captions and custom images.</p>
+                </div>
+            </div>
+        </section>
     </footer>
   </div>
   <script src="script.js"></script>
